--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -3,3 +3,10 @@ RUN apt update
 RUN apt install nginx -y
 
 COPY conf/nginx.conf /etc/nginx/nginx.conf
+
+CMD	["nginx"]
+
+# ENTRYPOINT	["/bin/bash"]
+# RUN nginx
+
+EXPOSE 443/tcp
