--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,3 +1,4 @@
+daemon off;
 # coucou
 user www-data;
 worker_processes auto;
@@ -14,6 +15,10 @@ http {
 	##
 	# Basic Settings
 	##
+
+	server { # simple reverse-proxy
+    	listen       443;
+	}
 
 	sendfile on;
 	tcp_nopush on;
