--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -18,6 +18,19 @@ http {
 
 	server { # simple reverse-proxy
     	listen       443;
+
+		root /var/www/html;
+		server_name localhost;
+		index index.php index.html index.htm;
+
+		location / {
+			try_files $uri $uri/ =404;
+		}
+
+		location ~ \.php$ {								# Pour toutes les requetes php
+			include snippets/fastcgi-php.conf;
+			fastcgi_pass wordpress:9000;				# Comment renvoyer les requetes php sur le port 9000
+		}
 	}
 
 	sendfile on;
