try something to make it work

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -9,6 +9,9 @@ RUN apt-get install -y php7.3\
                        php-mysql\
                        mariadb-client
 
+# Change PHP config file
+COPY conf/www.conf /etc/php/7.4/fpm/pool.d/www.conf
+
 RUN wget https://wordpress.org/latest.tar.gz -P /var/www
 RUN tar -xzvf /var/www/latest.tar.gz -C /var/www
 RUN rm /var/www/latest.tar.gz
