--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,8 +1,13 @@
 FROM debian:bullseye
 RUN apt update
+RUN apt upgrade -y
 RUN apt install nginx -y
 
 COPY conf/nginx.conf /etc/nginx/nginx.conf
+
+RUN mkdir -p /etc/nginx/ssl
+RUN apt install openssl -y
+RUN openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt -keyout /etc/nginx/ssl/inception.key -subj "/C=FR/ST=IDF/L=Paris/O=42/OU=42/CN=ajakubcz.42.fr/UID=ajakubcz"
 
 CMD	["nginx"]
 
