--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -17,10 +17,15 @@ http {
 	##
 
 	server { # simple reverse-proxy
-    	listen       443;
+		#SSL/TLS Configuration
+		listen 443 ssl;
+		ssl_protocols TLSv1.2 TLSv1.3;
+		ssl_certificate /etc/nginx/ssl/inception.crt;
+		ssl_certificate_key /etc/nginx/ssl/inception.key;
 
+		#root and index and server_name
 		root /var/www/html;
-		server_name localhost;
+		server_name ajakubcz.42.fr;
 		index index.php index.html index.htm;
 
 		location / {
