--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -24,9 +24,9 @@ http {
 		ssl_certificate_key /etc/nginx/ssl/inception.key;
 
 		#root and index and server_name
-		root /var/www/html;
-		server_name ajakubcz.42.fr;
-		index index.php index.html index.htm;
+		root /var/www/wordpress;
+		server_name localhost;
+		index index.php index.html;
 
 		location / {
 			try_files $uri $uri/ =404;
