--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -25,7 +25,7 @@ http {
 
 		#root and index and server_name
 		root /var/www/wordpress;
-		server_name localhost;
+		server_name ajakubcz.42.fr;
 		index index.php index.html;
 
 		location / {
