--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 networks:
   inception:
     driver: bridge
@@ -8,15 +6,15 @@ services:
   mariadb:
     container_name: mariadb
     networks:
-      - inception            # à quel network il appartient
-    build: 
+      - inception
+    build:
       context: requirements/mariadb # ou se trouve son Dockerfile
       dockerfile: Dockerfile # le nom du Dockerfile
     env_file: .env
-    volumes:                        # Voir plus bas
+    volumes:
       - mariadb:/var/lib/mysql
-    restart: unless-stopped         # redémarre tant qu'il n'est pas stoppé 
-    expose:                         # le port à exposer
+    restart: on-failure
+    expose:
       - "3306"
   nginx:
     container_name: nginx
@@ -24,15 +22,15 @@ services:
       - wordpress:/var/www/wordpress
     networks:
       - inception
-    depends_on:      # Nouvelle ligne, indiquant de ne pas démarrer NGINX tant que WordPress n'a pas démarré.
+    depends_on:      # Ne pas démarrer NGINX tant que WordPress n'a pas démarré.
       - wordpress
-    build: 
+    build:
       context: requirements/nginx
       dockerfile: Dockerfile
     env_file: .env
     ports:
-      - "443:443" # on indique le port qui sera exposé a la machine locale
-    restart: on-failure # Ici nous changeons, le container redémarrera uniquement en cas de crash.
+      - "443:443" # On indique le port qui sera exposé a la machine locale
+    restart: on-failure
   wordpress:
     container_name: wordpress
     env_file: .env
@@ -40,13 +38,13 @@ services:
       - wordpress:/var/www/wordpress
     networks:
       - inception
-    build: 
+    build:
       context: requirements/wordpress
       dockerfile: Dockerfile
     depends_on: # WordPress démarrera uniquement après MariaDB (sinon il ne pourra pas configurer la base de données...)
       - mariadb
     restart: on-failure
-    expose: 
+    expose:
       - "9000"
 
 
@@ -56,11 +54,11 @@ volumes:
     driver: local # ici nous stockons le volume en local
     driver_opts:
       type: 'none' # aucun type spécifique
-      o: 'bind'
+      o: 'bind' # Les Bind Mounts sont des volumes qui se montent sur un chemin d'accès à l'hôte, et ils peuvent être modifiés par d'autres processus en dehors de docker.
       device: '/home/ajakubcz/data/wordpress' #Ou stocker le dossier sur votre ordinateur en local
   mariadb:
     driver: local
     driver_opts:
-      type: 'none' 
-      o: 'bind' # Les Bind Mounts sont des volumes qui se montent sur un chemin d'accès à l'hôte, et ils peuvent être modifiés par d'autres processus en dehors de docker.
-      device: '/home/ajakubcz/data/mariadb' #Ou stocker le dossier sur votre ordinateur en local
+      type: 'none'
+      o: 'bind'
+      device: '/home/ajakubcz/data/mariadb'
