--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -7,53 +7,55 @@ services:
     container_name: mariadb
     networks:
       - inception
-    build:
-      context: requirements/mariadb # ou se trouve son Dockerfile
-      dockerfile: Dockerfile # le nom du Dockerfile
     env_file: .env
     volumes:
       - mariadb:/var/lib/mysql
-    restart: on-failure
+    build:
+      context: requirements/mariadb
+      dockerfile: Dockerfile
     expose:
       - "3306"
+    restart: on-failure
+
   nginx:
     container_name: nginx
-    volumes:
-      - wordpress:/var/www/wordpress
     networks:
       - inception
-    depends_on:      # Ne pas démarrer NGINX tant que WordPress n'a pas démarré.
+    env_file: .env
+    volumes:
+      - wordpress:/var/www/wordpress
+    depends_on:
       - wordpress
     build:
       context: requirements/nginx
       dockerfile: Dockerfile
-    env_file: .env
     ports:
-      - "443:443" # On indique le port qui sera exposé a la machine locale
+      - "443:443"
     restart: on-failure
+
   wordpress:
     container_name: wordpress
+    networks:
+      - inception
     env_file: .env
     volumes:
       - wordpress:/var/www/wordpress
-    networks:
-      - inception
+    depends_on:
+      - mariadb
     build:
       context: requirements/wordpress
       dockerfile: Dockerfile
-    depends_on: # WordPress démarrera uniquement après MariaDB (sinon il ne pourra pas configurer la base de données...)
-      - mariadb
-    restart: on-failure
     expose:
       - "9000"
+    restart: on-failure
 
 
 
 volumes:
   wordpress:
-    driver: local # ici nous stockons le volume en local
+    driver: local
     driver_opts:
-      type: 'none' # aucun type spécifique
+      type: 'none'
       o: 'bind' # Les Bind Mounts sont des volumes qui se montent sur un chemin d'accès à l'hôte, et ils peuvent être modifiés par d'autres processus en dehors de docker.
       device: '/home/ajakubcz/data/wordpress' #Ou stocker le dossier sur votre ordinateur en local
   mariadb:
