--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -16,11 +16,9 @@ COPY conf/www.conf /etc/php/7.4/fpm/pool.d/www.conf
 RUN wget https://wordpress.org/latest.tar.gz -P /var/www
 RUN tar -xzvf /var/www/latest.tar.gz -C /var/www
 RUN rm /var/www/latest.tar.gz
-RUN chown -R root:root /var/www/wordpress
 
-RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
-RUN chmod +x wp-cli.phar
-RUN mv wp-cli.phar /usr/local/bin/wp
+RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar -O /usr/local/bin/wp
+RUN chmod +x /usr/local/bin/wp
 
 COPY tools/script.sh ./script.sh
 CMD ["bash", "./script.sh"]
